--- a/styles.css
+++ b/styles.css
@@ -6,3 +6,11 @@
     font-style: normal;
     font-display: swap;
 }
+
+body {
+    width: 100vw;
+    height: 100vh;
+
+    display: flex;
+    flex-direction: row;
+}
