--- a/styles.css
+++ b/styles.css
@@ -19,3 +19,24 @@ div.sidebar {
     background-image: url("background.png");
     background-size: cover;
 }
+
+div.logo {
+    background-color: rgba(0, 0, 0, 0.5);
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+
+    padding: 8px 50px;
+}
+
+div.logo img {
+    width: 75px;
+}
+
+div.logo span.logo-text {
+    font-size: 75px;
+    color: white;
+    font-family: Norse;
+}
