--- a/styles.css
+++ b/styles.css
@@ -72,3 +72,21 @@ div.main form .form-fields p {
 
     max-width: 600px;
 }
+
+button#create-account {
+    margin: 32px 0;
+    padding: 12px 32px 12px 32px;
+    font-weight: 500;
+    color: white;
+    background-color: #596D48;
+    border: none;
+    border-radius: 8px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
+    cursor: pointer;
+}
+
+.login a {
+    color: #596D48;
+    font-weight: bold;
+    text-decoration: none;
+}
