--- a/styles.css
+++ b/styles.css
@@ -56,6 +56,11 @@ div.footer a {
     background-color: rgb(248, 248, 248);
 }
 
+.main form {
+    display: flex;
+    flex-direction: column;
+}
+
 div.main form > div {
     padding-left: 32px;
 }
