Style form fields

--- a/styles.css
+++ b/styles.css
@@ -78,6 +78,34 @@ div.main form .form-fields p {
     max-width: 600px;
 }
 
+.form-fields > div {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.form-fields .form-field {
+    display: flex;
+    flex-direction: column;
+    margin-right: 80px;
+    margin-bottom: 24px;
+}
+
+.form-field label {
+    text-transform: uppercase;
+    font-size: 0.85rem;
+    letter-spacing: 0.05rem;
+    font-weight: 500;
+    color: rgb(73, 73, 73);
+}
+
+.form-field input {
+    width: 250px;
+    padding: 4px;
+    border: 1px solid #e5e7eb;
+    border-radius: 3px;
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
+}
+
 button#create-account {
     margin: 32px 0;
     padding: 12px 32px 12px 32px;
