--- a/styles.css
+++ b/styles.css
@@ -108,11 +108,12 @@ div.main form .form-fields p {
 
 .form-field input {
     width: 250px;
-    padding: 4px;
+    padding: 6px;
     border: 1px solid #e5e7eb;
     border-radius: 3px;
     box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
-
+    font-weight: 400;
+    line-height: normal;
 }
 
 .form-field input:invalid {
