--- a/styles.css
+++ b/styles.css
@@ -12,8 +12,8 @@ html {
 }
 
 body {
-    width: 100vw;
-    height: 100vh;
+    min-width: 100vw;
+    min-height: 100vh;
 
     display: flex;
     flex-direction: row;
