--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,13 @@ div.sidebar {
     flex-shrink: 1;
 }
 
+div.logo-wrapper {
+    height: 250px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+}
+
 div.logo {
     background-color: rgba(0, 0, 0, 0.5);
 
