--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,9 @@ div.sidebar {
 
     flex-basis: 400px;
     flex-shrink: 1;
+
+    display: flex;
+    flex-direction: column;
 }
 
 div.logo-wrapper {
