--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,10 @@
     font-display: swap;
 }
 
+* {
+    outline: 1px solid red;
+}
+
 html {
     font-family: sans-serif;
 }
@@ -59,13 +63,13 @@ div.logo span.logo-text {
 
 div.footer {
     margin-top: auto;
+    padding-bottom: 16px;
 }
 
 div.footer,
 div.footer a {
     color: white;
     text-align: center;
-    padding-bottom: 16px;
 }
 
 .main {
